--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "axios": "^1.3.6",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.40.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/react": "^18.0.26",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.0.9",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
