--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.40.0"
+    "react-hook-form": "^7.40.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
@@ -30,6 +31,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
